# desktop-example-app

./: .dockerignore  .gitattributes  .gitignore  .tool-versions  CHANGELOG.md  Dockerfile  FEATURES.md  README.md  mix.exs  run  run.bat
.github/workflows/: android.yml  binaries.yml  ci.yml
assets/: package-lock.json  package.json
assets/css/: app.scss  todo.scss
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  test.exs
lib/: os.ex  todo.ex  todo_app.ex  todo_web.ex  ui.ex  wx.ex
lib/model/: todos.ex
lib/todo_app/: menu.eex  menu.ex  menu.html.heex  menu_bar.ex  menubar.eex  menubar.ex  repo.ex  todo.ex
lib/todo_web/: auth.ex  endpoint.ex  gettext.ex  router.ex  sup.ex  telemetry.ex
lib/todo_web/channels/: user_socket.ex
lib/todo_web/components/: core_components.ex  layouts.ex
lib/todo_web/components/layouts/: root.html.heex
lib/todo_web/controllers/: error.ex  error_html.ex  error_json.ex  page_controller.ex  page_html.ex
lib/todo_web/live/: todo_live.ex  todo_live.html.leex
lib/todo_web/templates/layout/: app.html.eex  live.html.leex  root.html.heex  root.html.leex
lib/todo_web/views/: error_helpers.ex  error_view.ex  layout_view.ex
lib/ui/: menu.eex  menu.ex  menubar.ex
priv/gettext/: default.pot
priv/gettext/de/LC_MESSAGES/: default.po
rel/android/: .gitignore  README.md  build.gradle  settings.gradle
rel/android/app/: .tool-versions  build.gradle  proguard-rules.pro  run_mix
rel/android/app/src/main/: AndroidManifest.xml
rel/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
rel/android/app/src/main/java/io/elixirdesktop/example/: Bridge.kt  MainActivity.kt
rel/android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
rel/android/app/src/main/res/layout/: activity_main.xml
rel/android/app/src/main/res/values/: colors.xml  strings.xml
rel/android/app/src/main/res/xml/: provider_paths.xml
rel/android/gradle/wrapper/: gradle-wrapper.properties
scripts/: Dockerfile  Dockerfile.cef  Dockerfile.raspbian  Dockerfile.sample  build_android.sh  build_sample.sh
